# repograph-intelligence

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  LICENSE.md  README.md  SECURITY.md  package-lock.json  package.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
apps/cli/: Cargo.toml
apps/cli/src/: main.rs
apps/github-action/: README.md  action.yml  package.json
apps/github-action/examples/: pr-gates.yml
apps/github-action/src/: formatters.js  github-client.js  run.js
apps/github-action/test/: formatters.test.js  github-client.test.js  json-recovery.test.js
apps/vscode/: .vscodeignore  README.md  package-lock.json  package.json  tsconfig.json
apps/vscode/src/: codelens.ts  extension.ts  mcp-client.ts  risk-view.ts
apps/vscode/test/: mcp-client.test.ts  path-safety.test.ts
apps/web/: index.html  package.json  server.js  tailwind.config.ts  tsconfig.json
apps/web/src/: api.ts  constants.ts  graph-utils.ts  main.tsx  styles.css  types.ts
crates/graph_engine/: Cargo.toml
crates/graph_engine/src/: lib.rs
crates/parser_engine/: Cargo.toml
crates/parser_engine/src/: lib.rs
crates/shared_types/: Cargo.toml
crates/shared_types/src/: lib.rs
crates/storage_engine/: Cargo.toml
crates/storage_engine/src/: lib.rs
docs/: GRAPH_SCHEMA.md  PRD.md  RUST_CORE.md
examples/: policy.example.json
test/: core.test.js  features.test.js
test/fixtures/sample-repo/py/: app.py  helpers.py
test/fixtures/sample-repo/src/: index.ts  util.ts
