[workspace]
members = [
  "apps/cli",
  "crates/graph_engine",
  "crates/parser_engine",
  "crates/shared_types",
  "crates/storage_engine"
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/Rajveerx11/repograph-intelligence"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
regex = "1.10"
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tree-sitter = "0.20"
tree-sitter-javascript = "0.20"
tree-sitter-python = "0.20"
tree-sitter-typescript = "0.20"
walkdir = "2.5"

